added colors to button

--- a/sps.css
+++ b/sps.css
@@ -5,7 +5,7 @@
 }
 h1{
     background-color: rgb(1, 1, 76);
-    color: white;
+    color: rgb(205, 230, 241);
     height: 5rem;
     line-height: 5rem;
 }
